--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,4 +43,30 @@ stages:
             command: 'plan'
             workingDirectory: '$(workingDirectory)'
             environmentServiceNameAzureRM: '$(AZURE_SERVICE_CONNECTION)'
-
+  - stage: ManualIntervention
+    jobs:
+      - job: ManualIntervention
+        displayName: 'Manual Intervention'
+        pool: server
+        steps:
+        - task: ManualValidation@1
+          inputs:
+            notifyUsers: 'bipinsngh16@gmail.com'
+            approvers: 'bipinsngh16@gmail.com'
+            instructions: 'Pls approve'
+  - stage: Apply
+    dependsOn: ManualIntervention
+    jobs:
+      - job: Apply
+        pool:
+         name: microtodoui
+        steps:
+        - task: TerraformTask@5
+          inputs:
+            provider: 'azurerm'
+            command: 'init'
+            workingDirectory: '$(workingDirectory)'
+            backendServiceArm: '$(AZURE_SERVICE_CONNECTION)'
+            backendAzureRmStorageAccountName: '$(BACKEND_STORAGE_ACCOUNT)'
+            backendAzureRmContainerName: '$(BACKEND_CONTAINER)'
+            backendAzureRmKey: '$(BACKEND_KEY_DEV)'
