--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,3 +70,12 @@ stages:
             backendAzureRmStorageAccountName: '$(BACKEND_STORAGE_ACCOUNT)'
             backendAzureRmContainerName: '$(BACKEND_CONTAINER)'
             backendAzureRmKey: '$(BACKEND_KEY_DEV)'
+        - task: TerraformTask@5
+          inputs:
+            provider: 'azurerm'
+            command: 'init'
+            workingDirectory: '$(workingDirectory)'
+            backendServiceArm: '$(AZURE_SERVICE_CONNECTION)'
+            backendAzureRmStorageAccountName: '$(BACKEND_STORAGE_ACCOUNT)'
+            backendAzureRmContainerName: '$(BACKEND_CONTAINER)'
+            backendAzureRmKey: '$(BACKEND_KEY_DEV)'
